# otp-push

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: lib.rs
docker/: Dockerfile  entrypoint.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20260427_000001_create_initial_tables.rs  m20260527_000001_add_pub_key_to_otp_request.rs
mobile/: .gitignore  settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/fyi/fortime/otppushmobile/: MainActivity.kt  MyFirebaseMessagingService.kt
mobile/app/src/main/java/fyi/fortime/otppushmobile/data/: Models.kt  PersistentStore.kt
mobile/app/src/main/java/fyi/fortime/otppushmobile/ui/screens/: LoginScreen.kt  MainContainerScreen.kt  MeTab.kt  NotificationsTab.kt  OtpFillScreen.kt  OtpRecordTokensScreen.kt  OtpRecordsTab.kt  OtpSubmissionScreen.kt  UsersTab.kt
mobile/app/src/main/java/fyi/fortime/otppushmobile/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile/app/src/main/java/fyi/fortime/otppushmobile/util/: ApiClient.kt  MockJwt.kt
mobile/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
mobile/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/examples/: decrypt_secret.rs
server/src/: auth.rs  config.rs  error.rs  handlers.rs  main.rs  state.rs
server/src/entities/: api_access_token.rs  device.rs  mod.rs  otp_record.rs  otp_request.rs  prelude.rs  user.rs  user_device.rs  user_limit.rs
server/src/handlers/: admin.rs  auth.rs  client.rs  mobile.rs  otp_records.rs  user.rs
server/src/handlers/client/: fcitx5_osk.rs
server/src/services/: otp.rs  user.rs
