[workspace]
members = [
    "common",
    "server",
    "migration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["fortime <palfortime@gmail.com>"]
license = "MIT"
repository = "https://github.com/fortime/otp-push-server"
description = "A server and mobile app for pushing OTP from phone to client."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
common = { path = "./common" }
migration = { path = "./migration" }
async-trait = "0.1"
sea-orm-migration = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
snafu = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde_with = { version = "3.0", features = ["chrono"] }
google-oauth = "1.1"
