[package]
name = "server"
version = "0.1.1"
edition = "2024"

[dev-dependencies]
base64.workspace = true
openssl.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
common.workspace = true
uuid.workspace = true
chrono.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
snafu.workspace = true
figment.workspace = true
clap.workspace = true
serde_with.workspace = true
google-oauth.workspace = true
fcm-service.workspace = true
spki.workspace = true
